--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,8 @@
             <li><a href="/anonymous/">All users can access this page</a></li>
             <li><a href="/authenticated/">All authenticated users can access this page</a></li>
             <li><a href="/admin/">Only users in the admin custom role can access this page</a></li>
+            <li><a href="/documentation/">Only users in the Documentation Reader role can access this page</a></li>
+            <li><a href="/producta/">Only users in the Product A Owners role can access this page</a></li>
         </ul>
     </div>
     <hr>
