--- a/frontend/documentation/index.html
+++ b/frontend/documentation/index.html
@@ -13,6 +13,6 @@
 <body>
     <h1>Product A Documentation</h1>
     Only owners of Product A can access this path
-    <img src="../images/National_Library_Symbol.svg" alt="Library Logo" />
+    <img src="../images/arc_cdr_events.svg" alt="Library Logo" />
 </body>
 </html>
