Changed embedded image to a link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,7 @@
             <li><a href="/admin/">Only users in the admin custom role can access this page</a></li>
             <li><a href="/documentation/">Only users in the Documentation Reader role can access this page</a></li>
             <li><a href="/producta/">Only users in the Product A Owners role can access this page</a></li>
+            <li><a href="/producta/arc_cdr_events.svg">Click Me</a></li>
         </ul>
     </div>
     <hr>
